--- a/TrainingFiles_1/faster_rcnn.config
+++ b/TrainingFiles_1/faster_rcnn.config
@@ -109,13 +109,13 @@ train_config {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "../training/model.ckpt"
+  fine_tune_checkpoint: "/training/model.ckpt"
   from_detection_checkpoint: true
 }
 train_input_reader {
   label_map_path: "./face_label.pbtxt"
   tf_record_input_reader {
-    input_path: "../training/train.record"
+    input_path: "/training/train.record"
   }
 }
 eval_config: {
@@ -127,6 +127,6 @@ eval_input_reader {
   shuffle: false
   num_readers: 1
   tf_record_input_reader {
-    input_path: "../training/test.record"
+    input_path: "/training/test.record"
   }
 }
